--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ body {
   background-color: var(--theme);
   font-family: "Poppins", sans-serif;
   font-family: "Roboto", sans-serif;
-  overflow: hidden;
+  overflow-x: hidden;
   color: var(--text);
 }
 
